Add AccountPackageRecurCharge entities
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42714

--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Product\Definition\ProductDefinitionInfo.cs" />
     <Compile Include="GenericFieldDefinition\GenericFieldDefinitionInfo.cs" />
     <Compile Include="IAccountBEDefinitionManager.cs" />
+    <Compile Include="RecurringCharge\AccountPackageRecurChargeData.cs" />
     <Compile Include="RecurringCharge\AccountPackageRecurCharge.cs" />
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorConfig.cs" />
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorDefinitionSettings.cs" />
