--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -85,6 +85,7 @@
     <Compile Include="AccountProvisioner\AccountProvisioner.cs" />
     <Compile Include="AccountProvisioner\AccountProvisionerConfig.cs" />
     <Compile Include="AccountProvisioner\AccountProvisionerDefinitionSettings.cs" />
+    <Compile Include="AccountStatusHistory\AccountStatusHistory.cs" />
     <Compile Include="AccountType\AccountTypeBESelectorFilter.cs" />
     <Compile Include="Account\AccountFilter.cs" />
     <Compile Include="AccountSynchronizerHandler\AccountSynchronizerInsertHandler.cs" />
