--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -153,6 +153,7 @@
     <Compile Include="AccountPartDefinitionOverriddenConfiguration.cs" />
     <Compile Include="AccountStatusHistory\AccountStatusHistoryManager.cs" />
     <Compile Include="AccountTypeOverriddenConfiguration.cs" />
+    <Compile Include="Context\FinancialAccountFilterContext.cs" />
     <Compile Include="Extensions\AccountBE360DegreeNodeType.cs" />
     <Compile Include="Extensions\AccountBERuntimeSelectorFilter.cs" />
     <Compile Include="Extensions\AccountMemoryAnalyticDataManager.cs" />
@@ -160,6 +161,8 @@
     <Compile Include="Extensions\DIDSynchronizer.cs" />
     <Compile Include="Extensions\FinancialAccountBalanceManager.cs" />
     <Compile Include="Extensions\FinancialAccountBalanceSetting.cs" />
+    <Compile Include="Filters\IAccountFilter\AccountBalanceStatusFilter.cs" />
+    <Compile Include="Filters\IAccountFilter\AccountInvoiceStatusFilter.cs" />
     <Compile Include="Filters\IBusinessEntityDefinitionFilter\ChargeableEntityDefinitionFilter.cs" />
     <Compile Include="Filters\IAccountFilter\FinancialAccountBEFilter.cs" />
     <Compile Include="FinancialAccount\FinancialAccountBalanceAccountFilter.cs" />
