Implementing package assignable
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42742

--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -142,6 +142,7 @@
     <Compile Include="AccountBEActionTypes\ChangeStatusActionSettings.cs" />
     <Compile Include="AccountChargeEvaluators\FixedChargeAccountRecurringChargeEvaluator.cs" />
     <Compile Include="AccountCitySerialNumberPart.cs" />
+    <Compile Include="AccountConditions\AssignableToPackageCondition.cs" />
     <Compile Include="AccountConditions\ConditionGroupAccountCondition.cs" />
     <Compile Include="AccountConditions\FinancialAccountCondition.cs" />
     <Compile Include="AccountConditions\SubAccountCondition.cs" />
