--- a/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
@@ -232,11 +232,13 @@
     <Content Include="Retail_BusinessEntity\Directives\AccountBalanceNotification\Templates\AccountBalanceNotificationTypeSearchEditorTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountBalanceNotification\Templates\AccountBalanceNotificationTypeSettingsTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\AccountConditionItemEditorController.js" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\retail-be-accountcondition-assignabletopackage.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\retail-be-accountcondition-conditiongroup.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\retail-be-accountcondition-filtergroup.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\retail-be-accountcondition-financialaccount.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\retail-be-accountcondition-subaccount.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\Templates\AccountConditionItemEditor.html" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\Templates\AssignableToPackageConditionTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\Templates\ConditionGroupAccountConditionTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\Templates\FilterGroupAccountConditionTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\Templates\FinancialAccountConditionTemplate.html" />
