--- a/Vanrise/Code/Vanrise.GenericData.Business/Vanrise.GenericData.Business.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Business/Vanrise.GenericData.Business.csproj
@@ -64,6 +64,7 @@
     <Compile Include="BusinessEntity\IExtensibleBEManager.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="DataRecordFieldFormulaCalculateValueContext.cs" />
+    <Compile Include="DataRecordFieldFormulaGetDependentFieldsContext.cs" />
     <Compile Include="DataStorage\CreateTempStorageContext.cs" />
     <Compile Include="DataRecordFieldChoiceManager.cs" />
     <Compile Include="DataRecordFieldFormulaConvertFilterContext.cs" />
