--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.MainExtensions/TOne.WhS.Sales.MainExtensions.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.MainExtensions/TOne.WhS.Sales.MainExtensions.csproj
@@ -81,6 +81,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateCalculation\FixedRateCalculationMethod.cs" />
     <Compile Include="RateCalculation\MarginRateCalculationMethod.cs" />
+    <Compile Include="SupplierTargetMatchCalculation\WeightedAverageTargetMatchCalculation.cs" />
+    <Compile Include="SupplierTargetMatchCalculation\AverageTargetMatchCalculation.cs" />
+    <Compile Include="SupplierTargetMatchCalculation\LCR2TargetMatchCalculation.cs" />
+    <Compile Include="SupplierTargetMatchCalculation\LCR3TargetMatchCalculation.cs" />
     <Compile Include="SupplierTargetMatchCalculation\LCR1TargetMatchCalculation.cs" />
     <Compile Include="TQIMethods\FirstOptionTQIMethod.cs" />
     <Compile Include="TQIMethods\SuggestedPercentagesTQIMethod.cs" />
