--- a/Vanrise/Code/Vanrise.HelperTools/App.config
+++ b/Vanrise/Code/Vanrise.HelperTools/App.config
@@ -9,6 +9,10 @@
     <add key="VersionDateFormat" value="yyyy-MM-dd" />
     <add key="VersionNumber" value="1.9" />
     <add key="ServerIP" value="192.168.110.185"/>
+    <add key="SQLUsername" value="readonlyUser"/>
+    <add key="SQLPassword" value="P@ssw0rd"/>
     <add key="ActiveDBs" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardTOneWhS_BEStructure#StandardTOneWhS_BEStructure_StateBackup#StandardCloudXpointStrcuture#StandardTOneWhS_CDR#StandardTOneWhS_Analytics#StandardMediation_CDRStructure#StandardMediationStructure#StandardRetailStructure#StandardRetail_Analytics#StandardRetail_EDR#StandardRetailStructure_Ringo#StandardXBoosterStructure#StandardXBooster_CDRComparisonOutputStructure#StandardCDRAnalysisStructure"/>
+    <add key="sqlFilesOutputPath" value="\\192.168.110.185\Fixes\WebSite\XBooster\{0}\DataBaseFirstDeploymentScripts\{1}"/>
+    <add key="javascriptsOutputPath" value="\\192.168.110.185\Fixes\WebSite\XBooster\{0}\Client\{1}"/>
   </appSettings>
 </configuration>
