--- a/Vanrise/Code/Vanrise.HelperTools/Vanrise.HelperTools.csproj
+++ b/Vanrise/Code/Vanrise.HelperTools/Vanrise.HelperTools.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common.cs" />
     <Compile Include="DataManager\HelperToolDataManager.cs" />
     <Compile Include="ECMAScriptPacker.cs" />
     <Compile Include="EncryptDecryptForm.cs">
