adding new condition
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42777

--- a/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
@@ -71,6 +71,7 @@
     <Compile Include="InvoiceActionSettings\EmailAction\InvoiceEmailActionController.cs" />
     <Compile Include="InvoiceActionSettings\EmailAction\InvoiceEmailActionManager.cs" />
     <Compile Include="InvoiceActionSettings\EmailAction\Configs\SendEmailAttachmentTypeConfig.cs" />
+    <Compile Include="InvoiceActionSettings\EmailAction\InvoiceFileConvertor\ConditionalInvoiceFile.cs" />
     <Compile Include="InvoiceActionSettings\InvoiceNoteAction.cs" />
     <Compile Include="InvoiceActionSettings\OpenRDLCReportActionManager.cs" />
     <Compile Include="InvoiceActionSettings\EmailAction\InvoiceFileConvertor\InvoiceRDLCFileConverter.cs" />
