--- a/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal.Invoice.Web.csproj
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal.Invoice.Web.csproj
@@ -156,17 +156,21 @@
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\GridActionEditorController.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\MainExtensions\GridActionSetting\partnerportal-invoice-gridaction-downloadattachment.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\MainExtensions\GridActionSetting\Templates\DownloadAttachmentAction.html" />
+    <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\MainExtensions\InvoiceViewerTypeExtendedSettings\partnerportal-invoice-extendedsettings-default.js" />
+    <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\MainExtensions\InvoiceViewerTypeExtendedSettings\Templates\DefaultInvoiceViewerExtendedSettings.html" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\partnerportal-invoice-gridactionsettings.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\partnerportal-invoice-gridactions.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\partnerportal-invoice-invoiceviewertype-selector.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\Templates\GridActionEditor.html" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\Templates\GridActionsManagement.html" />
+    <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\partnerportal-invoice-invoiceviewertype-extendedsettings.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Services\APIServices\InvoiceViewerTypeAPIService.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\GridColumnsEditorController.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\MainExtensions\InvoiceQueryInterceptor\partnerportal-invoice-partnerinvoicequeryinterceptor.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\MainExtensions\InvoiceQueryInterceptor\Templates\PartnerInvoiceQueryInterceptor.html" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Services\InvoiceViewerTypeGridActionService.js" />
     <Content Include="PartnerPortal_Invoice\Elements\Invoice\Directives\partnerportal-invoice-grid.js" />
+    <Content Include="PartnerPortal_Invoice\Elements\Invoice\Directives\partnerportal-invoice-selector.js" />
     <Content Include="PartnerPortal_Invoice\Elements\Invoice\Directives\partnerportal-invoice-vieweditor.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\partnerportal-invoice-gridcolumns.js" />
     <Content Include="PartnerPortal_Invoice\Elements\InvoiceViewerType\Directives\partnerportal-invoice-viewertypesettings.js" />
