--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
@@ -72,6 +72,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountStatementExtendedSettingsContext.cs" />
     <Compile Include="AccountStatementManager.cs" />
     <Compile Include="AnalyticManager.cs" />
     <Compile Include="LiveBalanceManager.cs" />
