--- a/CarrierPortal/Code/PartnerPortal.Invoice.Entities/PartnerPortal.Invoice.Entities.csproj
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Entities/PartnerPortal.Invoice.Entities.csproj
@@ -55,10 +55,12 @@
     <Compile Include="InvoiceViewerType\IInvoiceViewerTypeInfoFilter.cs" />
     <Compile Include="InvoiceViewerType\InvoiceGridActionSettingsConfig.cs" />
     <Compile Include="InvoiceViewerType\InvoiceViewerType.cs" />
+    <Compile Include="InvoiceViewerType\InvoiceViewerTypeExtendedSettingsConfigs.cs" />
     <Compile Include="InvoiceViewerType\InvoiceViewerTypeInfo.cs" />
     <Compile Include="InvoiceViewerType\InvoiceViewerTypeInfoFilter.cs" />
     <Compile Include="InvoiceViewerType\InvoiceViewerTypeRuntime.cs" />
     <Compile Include="InvoiceViewerType\InvoiceViewerTypeSettings.cs" />
+    <Compile Include="InvoiceViewerType\PortalInvoiceAccount.cs" />
     <Compile Include="Invoice\InvoiceAppDetail.cs" />
     <Compile Include="Invoice\InvoiceAppQuery.cs" />
     <Compile Include="InvoiceViewerType\InvoiceQueryInterceptor.cs" />
