--- a/CarrierPortal/Code/PartnerPortal.Invoice.MainExtensions/PartnerPortal.Invoice.MainExtensions.csproj
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.MainExtensions/PartnerPortal.Invoice.MainExtensions.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Retail.BusinessEntity.APIEntities">
+      <HintPath>..\..\..\Retail\Code\Output\Retail.BusinessEntity.APIEntities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -47,6 +50,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Common.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.Business.dll</HintPath>
@@ -70,6 +77,7 @@
     <Compile Include="InvoiceViewerTypeGridAction\DownloadAttachmentAction.cs" />
     <Compile Include="InvoiceViewerTypeGridAction\DownloadAttachmentActionController.cs" />
     <Compile Include="InvoiceViewerTypeGridAction\DownloadAttachmentActionManager.cs" />
+    <Compile Include="InvoiceViewerTypeGridAction\DefaultInvoiceViewerExtendedSettings.cs" />
     <Compile Include="Invoice\PartnerInvoiceQueryInterceptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
