Implementing Conditional Attachment
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42796

--- a/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
@@ -258,6 +258,10 @@
     <Content Include="VR_Invoice\Directives\InvoiceType\GeneratorSettings\MainExtensions\InvoiceFilterCondition\Templates\FilterGroupConditionTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\GeneratorSettings\MainExtensions\InvoiceFilterCondition\vr-invoicetype-invoicegeneratorfiltercondition-filtergroup.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\GeneratorSettings\MainExtensions\vr-invoicetype-invoicegeneratorfiltercondition.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\SendEmail\MainExtensions\ConditionalAttachmentEditorController.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\SendEmail\MainExtensions\Templates\ConditionalInvoiceFileTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\SendEmail\MainExtensions\Templates\ConditionalAttachmentEditor.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\SendEmail\MainExtensions\vr-invoiceactions-sendemail-attachmenttype-conditionalinvoicefile.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\Templates\InvoiceNoteActionTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\Templates\RecreateActionTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\Templates\SetInvoiceLockActionTemplate.html" />
