releasing migrator tool
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42800

--- a/Vanrise/Code/MigrateIDs/MigrateIDs/App.config
+++ b/Vanrise/Code/MigrateIDs/MigrateIDs/App.config
@@ -5,7 +5,7 @@
     </startup>
   <connectionStrings>
 
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Configuration;User ID=Development;Password=dev!123"/>
+    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CDRAnalysisConfiguration;User ID=Development;Password=dev!123"/>
     
     <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.195;Database=TOneV2configurationfidaa;User ID=sa;Password=QAP@ssw0rd"/>-->
     <add name="DevDBConnString" connectionString="Server=192.168.110.185;Database=TOneV2_Dev;User ID=Development;Password=dev!123"/>
@@ -18,6 +18,6 @@
     <!--<add key="SecondDBConnStringKey" value="DevDBConnString"/>-->
     <!--<add key="MediationDBConnStringKey" value="MediationBConnStringKey"/>-->
     <!--<add key="TransactionDBConnStringKey" value="TransactionBConnStringKey"/>-->
-    <add key="RetailDBConnStringKey" value="RetailBConnStringKey"/>
+    <!--<add key="RetailDBConnStringKey" value="RetailBConnStringKey"/>-->
   </appSettings>
 </configuration>  
